[gd_scene load_steps=6 format=2]

[ext_resource path="res://dodge_assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://IncredibleLumHunt.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="InputEventAction" id=2]
action = "ui_select"

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[node name="IncredibleLumHunt" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="AnockLabel" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lumble" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -39.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "Dodge the Mice!"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bumstartpat" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -172.5
margin_top = -200.0
margin_right = 172.5
margin_bottom = -100.0
custom_fonts/font = SubResource( 1 )
shortcut = SubResource( 3 )
text = "Startpats!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LumbleTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="pressed" from="Bumstartpat" to="." method="_on_Bumstartpat_pressed"]
[connection signal="timeout" from="LumbleTimer" to="." method="_on_LumbleTimer_timeout"]
